--- a/manifests/helm/values-oversea.yaml
+++ b/manifests/helm/values-oversea.yaml
@@ -43,7 +43,7 @@ service:
   port: 8080
 
 ingress:
-  enabled: true
+  enabled: false
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
