--- a/manifests/helm/templates/service.yaml
+++ b/manifests/helm/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "echo-server.fullname" . }}
+  name: echo-server
   labels:
-    {{- include "echo-server.labels" . | nindent 4 }}
+    app: echo-server
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: 8080
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "echo-server.selectorLabels" . | nindent 4 }}
+    app: echo-server
