--- a/manifests/directory/staging/service.yaml
+++ b/manifests/directory/staging/service.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   ports:
     - port: 80
-      nodePort: 30002
+      protocol: TCP
+      targetPort: 8080
   selector:
     app: echo-server
