--- a/manifests/helm/web-demo/templates/deployment.yaml
+++ b/manifests/helm/web-demo/templates/deployment.yaml
@@ -14,6 +14,9 @@ spec:
     metadata:
       labels:
         app: web-demo
+        {{ if .Values.clusterId }}
+        topology.istio.io/cluster: {{ .Values.clusterId }}
+        {{ end }}
     spec:
       containers:
       - image: "{{ .Values.registryDomain }}/{{ .Values.image }}:{{ .Values.tag }}"
