--- a/manifests/kustomize/base/deployment.yaml
+++ b/manifests/kustomize/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app.kubernetes.io/name: echo-server
     spec:
       containers:
-      - image: registry.cn-hangzhou.aliyuncs.com/haoshuwei24/echo-server:v1.0
+      - image: demo-test-registry.cn-hangzhou.cr.aliyuncs.com/cidemo/echo-server:v1.0
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
