--- a/manifests/helm/echo-server/values-dev.yaml
+++ b/manifests/helm/echo-server/values-dev.yaml
@@ -2,17 +2,29 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
-  repository: registry.cn-hangzhou.aliyuncs.com/haoshuwei24/echo-server
+  echoServer:
+    repository: demo-test-registry.cn-hangzhou.cr.aliyuncs.com/cidemo/echo-server
+    tag: "v1.0"
+  echoWebServer:
+    repository: demo-test-registry.cn-hangzhou.cr.aliyuncs.com/cidemo/echo-web-server
+    tag: "v1.0"
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "v2.0-oversea"
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+
+secretManager:
+  enabled: true
+  secretName: db-cred-dev
+  kmsKey: db-cred-dev
+  dataName: dbinfo
+  versionStage: ACSCurrent
+
 
 serviceAccount:
   # Specifies whether a service account should be created
