add kruise rollout

--- a/manifests/helm/echo-server/values-dev.yaml
+++ b/manifests/helm/echo-server/values-dev.yaml
@@ -25,6 +25,9 @@ secretManager:
   dataName: dbinfo
   versionStage: ACSCurrent
 
+rollout:
+  enabled: false
+
 
 serviceAccount:
   # Specifies whether a service account should be created
