--- a/manifests/helm/echo-server/values-production.yaml
+++ b/manifests/helm/echo-server/values-production.yaml
@@ -24,6 +24,9 @@ secretManager:
   dataName: dbinfo
   versionStage: ACSCurrent
 
+rollout:
+  enabled: true
+
 
 serviceAccount:
   # Specifies whether a service account should be created
