--- a/manifests/helm/echo-server/values.yaml
+++ b/manifests/helm/echo-server/values.yaml
@@ -24,6 +24,8 @@ secretManager:
   dataName: dbinfo
   versionStage: ACSCurrent
 
+rollout:
+  enabled: false
 
 serviceAccount:
   # Specifies whether a service account should be created
