--- a/manifests/helm/echo-server/values-dev.yaml
+++ b/manifests/helm/echo-server/values-dev.yaml
@@ -6,11 +6,11 @@ replicaCount: 2
 
 image:
   echoServer:
-    repository: demo-test-registry.cn-hangzhou.cr.aliyuncs.com/cidemo/echo-server
-    tag: "v1.0"
+    repository: demo-registry.cn-hongkong.cr.aliyuncs.com/acs/echo-server
+    tag: "v1"
   echoWebServer:
-    repository: demo-test-registry.cn-hangzhou.cr.aliyuncs.com/cidemo/echo-web-server
-    tag: "v1.0"
+    repository: demo-registry.cn-hongkong.cr.aliyuncs.com/acs/echo-web-server
+    tag: "v1"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -19,7 +19,7 @@ fullnameOverride: ""
 
 
 secretManager:
-  enabled: true
+  enabled: false
   secretName: db-cred-dev
   kmsKey: db-cred-dev
   dataName: dbinfo
