--- a/manifests/helm/echo-server/templates/deployment-echo-web-server.yaml
+++ b/manifests/helm/echo-server/templates/deployment-echo-web-server.yaml
@@ -31,7 +31,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.echoServerForTest.repository }}:{{ .Values.image.echoServerForTest.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.echoWebServer.repository }}:{{ .Values.image.echoWebServer.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
