--- a/manifests/helm/echo-server/values-dev.yaml
+++ b/manifests/helm/echo-server/values-dev.yaml
@@ -19,7 +19,7 @@ fullnameOverride: ""
 
 
 secretManager:
-  enabled: true
+  enabled: false
   secretName: db-cred-dev
   kmsKey: db-cred-dev
   dataName: dbinfo
