--- a/applications/ack-cloud-2/bookinfo.yaml
+++ b/applications/ack-cloud-2/bookinfo.yaml
@@ -45,18 +45,18 @@ metadata:
   namespace: demo
   labels:
     app: details
-    cluster: ack-cloud-2
+    cluster: ack-distro-onprem
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: details
-      cluster: ack-cloud-2
+      cluster: ack-distro-onprem
   template:
     metadata:
       labels:
         app: details
-        cluster: ack-cloud-2
+        cluster: ack-distro-onprem
     spec:
       serviceAccountName: bookinfo-details
       containers:
@@ -101,18 +101,18 @@ metadata:
   namespace: demo
   labels:
     app: reviews
-    cluster: ack-cloud-2
+    cluster: ack-distro-onprem
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: reviews
-      cluster: ack-cloud-2
+      cluster: ack-distro-onprem
   template:
     metadata:
       labels:
         app: reviews
-        cluster: ack-cloud-2
+        cluster: ack-distro-onprem
     spec:
       serviceAccountName: bookinfo-reviews
       containers:
@@ -170,18 +170,18 @@ metadata:
   namespace: demo
   labels:
     app: productpage
-    cluster: ack-cloud-2
+    cluster: ack-distro-onprem
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: productpage
-      cluster: ack-cloud-2
+      cluster: ack-distro-onprem
   template:
     metadata:
       labels:
         app: productpage
-        cluster: ack-cloud-2
+        cluster: ack-distro-onprem
     spec:
       serviceAccountName: bookinfo-productpage
       containers:
