--- a/applications/asm-servicemesh/rules.yaml
+++ b/applications/asm-servicemesh/rules.yaml
@@ -26,7 +26,7 @@ spec:
         cluster: ack-cloud
       name: ack
     - labels:
-        cluster: ack-cloud-2
+        cluster: ack-distro-onprem
       name: distro
 ---
 apiVersion: networking.istio.io/v1beta1
