--- a/applications/ack-cloud/bookinfo.yaml
+++ b/applications/ack-cloud/bookinfo.yaml
@@ -110,6 +110,12 @@ spec:
           value: "/tmp/logs"
         ports:
         - containerPort: 9080
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 9080
+          initialDelaySeconds: 15
+          periodSeconds: 10
         volumeMounts:
         - name: tmp
           mountPath: /tmp
