--- a/applications/ack-cloud-2/bookinfo.yaml
+++ b/applications/ack-cloud-2/bookinfo.yaml
@@ -19,7 +19,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: details
-  namespace: demo
+  namespace: kiali-demo
   labels:
     app: details
     service: details
@@ -34,7 +34,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-details
-  namespace: demo
+  namespace: kiali-demo
   labels:
     account: details
 ---
@@ -42,7 +42,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: details-distro
-  namespace: demo
+  namespace: kiali-demo
   labels:
     app: details
     cluster: ack-distro-onprem
@@ -75,7 +75,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: reviews
-  namespace: demo
+  namespace: kiali-demo
   labels:
     app: reviews
     service: reviews
@@ -90,7 +90,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-reviews
-  namespace: demo
+  namespace: kiali-demo
   labels:
     account: reviews
 ---
@@ -98,7 +98,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-distro
-  namespace: demo
+  namespace: kiali-demo
   labels:
     app: reviews
     cluster: ack-distro-onprem
@@ -150,7 +150,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: productpage
-  namespace: demo
+  namespace: kiali-demo
   labels:
     app: productpage
     service: productpage
@@ -165,7 +165,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-productpage
-  namespace: demo
+  namespace: kiali-demo
   labels:
     account: productpage
 ---
@@ -173,7 +173,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: productpage-distro
-  namespace: demo
+  namespace: kiali-demo
   labels:
     app: productpage
     cluster: ack-distro-onprem
