--- a/manifests/helm/web-demo/templates/service.yaml
+++ b/manifests/helm/web-demo/templates/service.yaml
@@ -4,11 +4,20 @@ metadata:
   name: service1
   namespace: {{ .Release.Namespace }}
 spec:
+  selector:
+    app: web-demo
+  {{ if .Values.isNodePort }}
+  type: NodePort
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
-  selector:
-    app: web-demo
-  sessionAffinity: None
+    nodePort: 30100
+  {{ else }}
   type: ClusterIP
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 8080
+  {{ end }}
+  sessionAffinity: None
