--- a/manifests/helm/web-demo/templates/deployment.yaml
+++ b/manifests/helm/web-demo/templates/deployment.yaml
@@ -20,8 +20,9 @@ spec:
         {{ end }}
     spec:
       containers:
-      - image: "{{ .Values.registryDomain }}/{{ .Values.image }}:{{ .Values.tag }}"
-        name: web-demo
-        env:
-        - name: ENV_NAME
-          value: "{{ .Values.envName }}"
+        - image: "{{ .Values.registryDomain }}/{{ .Values.image }}:{{ .Values.tag }}"
+          imagePullPolicy: Always
+          name: web-demo
+          env:
+            - name: ENV_NAME
+              value: "{{ .Values.envCluster }}"
