update web-demo with policy

--- a/manifests/helm/web-demo/templates/policy-nsdeleteprotection.yaml
+++ b/manifests/helm/web-demo/templates/policy-nsdeleteprotection.yaml
@@ -3,6 +3,7 @@ kind: ACKNamespacesDeleteProtection
 metadata:
   annotations:
     description: Protect to delete specific namespace.
+    argocd.argoproj.io/sync-wave: "1"
   name: namespace-delete-protection-zhx9c
 spec:
   enforcementAction: deny
